Removed extra file

--- a/schnuppertag/schnuppertag-slides.html
+++ b/schnuppertag/schnuppertag-slides.html
@@ -1,7 +1,7 @@
 ---
 layout: presentation
 title: Objektorientierte Programmierung
-permalink: schnuppertag/slides/
+permalink: schnuppertag/
 ---
 
 layout: true
